--- a/style/extras.css
+++ b/style/extras.css
@@ -289,6 +289,7 @@ textarea#page-mod-forum-discuss .discussioncontrols .discussioncontrol.movediscu
 .dropdown-menu.usermen {
   top: 23px;
   margin-left: -54px;
+  left: -65px;
 }
 
 .usermen li {
@@ -317,7 +318,6 @@ textarea#page-mod-forum-discuss .discussioncontrols .discussioncontrol.movediscu
   background: #eee;
   background-color: #eee;
 }
-
 
 /*new message over */
 #newmessageoverlay {
