--- a/style/menu.css
+++ b/style/menu.css
@@ -89,7 +89,6 @@
     padding: 5px 0;
     position: absolute;
     right: 0;
-    left: -65px;
     width: 240px;
     top: 100%;
     z-index: 1000;
